Cleaned up some minor UI details for the SetUpDataExploration, ExploreData and StudyPage, like alignment, padding, font-weight, text labels.  Fixed an issue with the ExploreDataPage leaving a dataverse and being displayed as a network page, because the link from the StudyPage wasn't formatted properly.

--- a/dvn-app/trunk/src/DVN-web/web/resources/css/dvnstudy.css
+++ b/dvn-app/trunk/src/DVN-web/web/resources/css/dvnstudy.css
@@ -111,6 +111,7 @@ select.vdcStudyFileRowFileDownloadAsList{margin-left:.5em}
 .vdcStudyFileSubset table.vdcStudyFileSubsetTable td a{text-transform:uppercase;font-size:100% !important}
 .vdcStudyFileSubsetAnalysis a:hover,.vdcStudyFileSubsetAnalysis a:active{color:#c55b28;text-decoration:underline}
 a.vdcStudyFileSubsetAnalysisLink:link,a.vdcStudyFileSubsetAnalysisLink:hover,a.vdcStudyFileSubsetAnalysisLink:active,a.vdcStudyFileSubsetAnalysisLink:visited{padding:2px 0px 2px 24px;background:url(/dvn/resources/images/icon_analyze.gif) no-repeat;font-size:90% !important;vertical-align:top}
+a.vdcStudyFileSubsetAnalysisLink.dvnStudyFileVisualizationLink{display:block; margin-top:4px;}
 .vdcStudyDataCitationContainer{padding:0 .5em 0 .25em;}
 .vdcStudyDataCitation span{padding:0 0 2px 24px !important;display:inline !important;background:url(/dvn/resources/images/icon_citation.gif) no-repeat;font-size:90% !important}
 .downloadas,.downloadas ul{list-style:none;margin:0;padding:0}
